hphp/hack/test/typecheck/constraints/use_trait_bad_constraint_2.php.exp
File "use_trait_bad_constraint_2.php", line 10, characters 7-16:
Some type constraint(s) here are violated (Typing[4323])
File "use_trait_bad_constraint_2.php", line 4, characters 14-15:
`Tb` is a constrained type parameter
File "use_trait_bad_constraint_2.php", line 10, characters 10-11:
Expected `Ta`
File "use_trait_bad_constraint_2.php", line 4, characters 20-21:
  via this generic `Ta`
File "use_trait_bad_constraint_2.php", line 10, characters 14-15:
But got `Tb`
